# poetry_migration

./: .gitignore  .temp.bash.20251030021911.sh  .temp.bash.20251030021925.sh  .temp.bash.20251030021937.sh  .temp.bash.20251030021948.sh  .temp.bash.20251030021958.sh  .temp.bash.20251030022043.sh  .temp.bash.20251030022503.sh  .temp.bash.uv_lock_chunk_aa.sh  .temp.bash.uv_lock_chunk_ab.sh  .temp.bash.uv_lock_chunk_ac.sh  .temp.bash.uv_lock_chunk_ad.sh  .temp.migrate_poetry_to_uv.1_oo.1.sh  .temp.migrate_poetry_to_uv.2_functional.1.sh  .temp.migrate_poetry_to_uv.3_functional.1.sh  .temp.migrate_poetry_to_uv.4_functional.1.sh  .temp.migrate_poetry_to_uv.apitesting.sh  .temp.migrate_poetry_to_uv.clean_code_after.1.sh  .temp.migrate_poetry_to_uv.clean_code_after.2.sh  .temp.migrate_poetry_to_uv.clean_code_after.3.sh  .temp.migrate_poetry_to_uv.clean_code_after.4.sh  .temp.migrate_poetry_to_uv.clean_code_after.sh  .temp.migrate_poetry_to_uv.clean_code_before.sh  .temp.migrate_poetry_to_uv.doc.sh  .temp.migrate_poetry_to_uv.func.1.sh  .temp.migrate_poetry_to_uv.func.2.sh  .temp.migrate_poetry_to_uv.func.sh  .temp.migrate_poetry_to_uv.func_design.1.sh  .temp.migrate_poetry_to_uv.func_design.2.sh  .temp.migrate_poetry_to_uv.func_design.sh  .temp.migrate_poetry_to_uv.funclass23.sh  .temp.migrate_poetry_to_uv.gil.1.sh  .temp.migrate_poetry_to_uv.pydantic_refresh.1.sh  .temp.migrate_poetry_to_uv.python15.1.sh  .temp.migrate_poetry_to_uv.shellroast_after.sh  .temp.migrate_to_poetry_migration.sh  CODE_STANDARDS.md  CODE_STANDARDS.md.bak.20251112003422  MigratingToUV.md  README.md  (+21 more)
(+2 files in other folders)
