[project]
name = "poetry-migration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "pyyaml>=6.0.2",
    "tomlkit>=0.13.3",
    "types-pyyaml>=6.0.12.20250915",
    "typer>=0.12.5",
    "rich>=13.9.2",
]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]

[project.scripts]
migrate-poetry = "migrate_repo:main"
